# cmgd_coordinator

./: README.md
api/: pyproject.toml
pipeline/: main.nf
pipeline/rnaseq-nf/: main.nf  nextflow.config
scripts/: get_demo_databases.sh  get_nextflow.sh
